clusters/homelab/apps/website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      automountServiceAccountToken: false
      containers:
        - name: website
          image: ghcr.io/unshade/website:v1.10.0@sha256:6537083126cecd92e80557699930c43a4873fdb0e7742bf6cdf4a465d60ce3e9
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
