clusters/homelab/apps/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: website
