clusters/homelab/apps/website/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "nstnr.com"
    - "www.nstnr.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: website
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
